src/app/pages/available/available.page.scss
.critters-grid {
  display: flex;
  flex-wrap: wrap;
  padding: 0 5px;
  justify-content: space-between;

  .critter {
    flex: 0 0 80px;
    padding: 10px 2px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;

    ion-avatar {
      background: var(--ion-color-step-100);
      width: 50px;
      height: 50px;

      ion-img {
        width: 85%;
        margin: 10% auto 0 auto;
        height: 85%;
      }
    }

    ion-label {
      text-align: center;
      font-size: .85rem;
      height: 100%
    }

    &.caught {
      ion-avatar {
        background: rgb(var(--ion-color-island-rgb));
      }
    }
  }
}

.filters-container {
  margin-top: 10px;
  padding: 5px 0;
  border-radius: 10px;
  background-color: var(--ion-color-step-100);

  .filters-title {
    font-weight: 700;
    font-size: 12px;
    padding: 5px 10px;
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  .filters-chips-container {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    transition: height .3s ease-in-out, opacity .3s ease-out .3s;
    opacity: 0;
    height: 0;
    overflow-x: hidden;
    
    ion-chip {
      flex: 0 0 auto;
      &.active {
        background: rgb(var(--ion-color-island-rgb));
      }
    }
  }
  

  &.open {
    .filters-chips-container {
      height: 90px;
      overflow-x: auto;
      opacity: 1;
    }

    &.small {
      .filters-chips-container {
        height: auto;
        flex-direction: row;
      }
    }
  }
}

